--- a/frontend/src/components/CourseCard.css
+++ b/frontend/src/components/CourseCard.css
@@ -10,7 +10,8 @@
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
+  width: 105%;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -140,7 +141,7 @@
   color: #ffecd2;
 }
 
-.view-btn {
+.view-btnn {
   background: #fff;
   color: #e73c7e;
   padding: 8px 18px;
@@ -151,7 +152,7 @@
   transition: 0.3s;
 }
 
-.view-btn:hover {
+.view-btnn:hover {
   background: #e73c7e;
   color: #fff;
   box-shadow: 0 0 15px rgba(231, 60, 126, 0.5);
