--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -131,11 +131,11 @@ h2 {
 
 .hero-image img {
   width: 100%;
-  max-width: 500px;
+  max-width: 700px;
   border-radius: 20px;
   /* Glass border around image */
-  border: 5px solid rgba(255,255,255,0.2);
-  box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+  border: 2px solid rgba(255, 255, 255, 0.942);
+  box-shadow: 0 20px 50px rgba(233, 230, 230, 0.373);
   animation: floatImage 4s ease-in-out infinite;
 }
 
@@ -163,7 +163,8 @@ h2 {
 }
 /* FEATURES */
 .features {
-  padding: 80px 8%;
+  
+  padding: 50px 5%;
  background: radial-gradient(circle at top, #1b1f45, #0b0e1a 70%);
   text-align: center;
 }
